--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "multer": "^2.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
